# TODOgame

./: .gitignore  CMakeLists.txt
include/: argsparser.h  filemanager.h  task.h  taskmanager.h
src/: argsparser.cpp  filemanager.cpp  main.cpp  taskmanager.cpp
